fixed gemfile and updated the js

--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -55,3 +55,70 @@
 <div class="footer">
 <!-- FYI: A well informed electorate is a prerequisite for democracy. - Thomas Jefferson -->
 </div>
+
+<script>
+(function($){
+    $(function(){
+
+
+      var wrapper_top = $(".progress .wrapper").offset().top;
+      $(window).scroll(function (){
+        var wrapper_height = $(".progress .wrapper").height();
+
+        // Affixes Progress Bars
+          var top = $(this).scrollTop();
+        if (top > wrapper_top - 10) {
+            // $(".progress .wrapper").addClass("affix");
+        }
+        else {
+                // $(".progress .wrapper").removeClass("affix");
+        }
+
+
+        // Calculate each progress section
+        $(".tracker div").each(function(i){
+            var this_top = $(this).offset().top;
+            var height = $(this).height();
+            var this_bottom = this_top + height;
+            var percent = 0;
+
+// This is the seciton we'll need to revisit
+            // Scrolled within current section
+            if (top >= this_top && top <= this_bottom) {
+                percent = ((top - this_top) / (height - wrapper_height)) * 225;
+                console.log(percent);
+                if (percent >= 100) {
+                    percent = 100;
+                    $(".progress .wrapper .bar:eq("+i+") i").css("color", "#fff");
+                }
+                else {
+                    $(".progress .wrapper .bar:eq("+i+") i").css("color", "#36a7f3");
+                }
+            }
+            else if (top > this_bottom) {
+                percent = 100;
+                $(".progress .wrapper .bar:eq("+i+") i").css("color", "#fff");
+            }
+            console.log(i);
+            $(".progress .wrapper .bar:eq("+i+") span").css("width", percent + "%");
+        });
+      });
+
+
+      // Smooth Scroll Links
+      $(".wrapper .bar a").click(function (e){
+        e.preventDefault();
+
+        var hash = this.hash.substr(1);
+        console.log(hash);
+        $('html, body').animate({
+        scrollTop: $("#"+ hash).offset().top - 10
+        }, 500);
+
+      });
+
+
+
+    }); // end of document ready
+})(jQuery); // end of jQuery name space
+</script>
