--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -53,7 +53,7 @@
 
 
 <div class="footer">
-<!-- FYI: A well informed electorate is a prerequisite for democracy. - Thomas Jefferson -->
+FYI: A well informed electorate is a prerequisite for democracy. - Thomas Jefferson 
 </div>
 
 <script>
@@ -82,7 +82,7 @@
             var this_bottom = this_top + height;
             var percent = 0;
 
-// This is the seciton we'll need to revisit
+// This is the section we'll need to revisit
             // Scrolled within current section
             if (top >= this_top && top <= this_bottom) {
                 percent = ((top - this_top) / (height - wrapper_height)) * 225;
