--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -13,8 +13,7 @@
 
 <!-- navBar -->
 <div class="row" id="navBar">
-    <div class="two columns" id="mostRead">
-        <%= link_to "See all", articles_path, { :class=>"hrefLink" } %>
+    <div class="two columns hrefLink" id="mostRead">Most Read
     </div>
 </div>
 <!-- scroll-along tracker -->
