--- a/app/views/articles/_nav.html.erb
+++ b/app/views/articles/_nav.html.erb
@@ -1,15 +1,15 @@
 
 <div class="row <%= controller_name %> <%= action_name %>" id="navBar">
-   <div class="two columns" id="twoMinutes">
-       <%= link_to "2 minutes", { :class=>"hrefLink", :remote => true} %>
+   <div class="two columns hrefLink" id="twoMinutes">2 Minutes
+       <%# link_to "2 minutes", { :class=>"hrefLink", :remote => true} %>
    </div>
-    <div class="two columns" id="fourMinutes">
-        <%= link_to "4 minutes", { :class=>"hrefLink", :remote => true} %>
+    <div class="two columns" id="fourMinutes">4 Minutes
+        <%# link_to "4 minutes", { :class=>"hrefLink", :remote => true} %>
     </div>
-    <div class="two columns" id="sixMinutes">
-        <%= link_to "6 minutes", { :class=>"hrefLink", :remote => true} %>
+    <div class="two columns" id="sixMinutes">6 Minutes
+        <%# link_to "6 minutes", { :class=>"hrefLink", :remote => true} %>
     </div>
-    <div class="two columns" id="tenMinutes">
-        <%= link_to "10 minutes", { :class=>"hrefLink", :remote => true} %>
+    <div class="two columns" id="tenMinutes">10 Minutes
+        <%# link_to "10 minutes", { :class=>"hrefLink", :remote => true} %>
     </div>
 <!-- </div> -->
