--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -13,14 +13,14 @@
         <% @user.likes.each do |like| %>
             <div>
                 <h1 class="storyHeadline <%= like.article.length_class %>"><%= link_to "#{like.article.title}", article_path(like.article), {:class => "hrefLink"} %></h1>
-                <button class="readMore"><%= link_to "Read More", article_path(like.article_id) %></button>
+                <div class="readMore"><%= link_to "Read More", article_path(like.article_id) %></div>
 
-                <button class="readMore"><%= link_to "Remove from Reading List", like_path(like.id), :method => "delete" %></button>
+                <div class="readMore"><%= link_to "Remove from List", like_path(like.id), :method => "delete" %></div>
 
                 <p><%= like.article.author %>, <%= like.article.publication %></p>
 
                 <p class="storyPreview wide"><%= truncate(like.article.fulltext, :length => 500 )%></p>
-            </div>    
+            </div>
         <% end %>
     </div> <!-- End contentSection -->
 </div> <!-- End contentWrapper -->
