adding comments and removing unncessary code

--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -1,8 +1,9 @@
 <!-- navBar -->
 <%= render "nav" %>
-<div class="two columns hrefLink " id="mostRead">Most Read
+<div class="two columns hrefLink " id="mostRead">Most Read </div>
+<!-- closes the navBar div -->
 </div>
-</div>
+
 
 <!-- search bar -->
 <%= form_tag("/articles", method: "get") do %>
